# A2A_MCP_Demo

./: .env  .gitignore  Makefile  README.md  compose.yml  pyproject.toml
.devcontainer/: Dockerfile  compose.yml  devcontainer-lock.json  devcontainer.json
services/agent-returns/: Dockerfile  pyproject.toml
services/agent-returns/src/: __init__.py  main.py
services/agents/agent_returns/: Dockerfile  agent.py  pyproject.toml
services/agents/agent_support/: Dockerfile  agent.py  pyproject.toml
services/mcp-orders/: Dockerfile  main.py  pyproject.toml
